ISPN-15933 HTTP compression/decompression
* Add decompression
* Enable deflate
* Add tests